@@ -20,6 +20,7 @@ Mejorado ZX Vision:
 Quitar indicador de buffer lleno al pulsar shift+e en ventana de Fuente de sonido externa
 Corregida autocarga de TZX como Cinta Real en Spectrum +3
 Corregido hotswap ZX80 a ZX81, ZX81 a ZX80
+Corregido Scroll de Amstrad CPC
 
 ----
 
